--- a/CompositeModelAssignment.vcxproj
+++ b/CompositeModelAssignment.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="Company.h" />
     <ClInclude Include="Department.h" />
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="Project.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
