--- a/CompositeModelAssignment.vcxproj.filters
+++ b/CompositeModelAssignment.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
