--- a/CompositeModelAssignment.vcxproj.filters
+++ b/CompositeModelAssignment.vcxproj.filters
@@ -54,4 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="data.json">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
